ecsdemo-frontend/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecsdemo-frontend
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ecsdemo-frontend
          servicePort: 8080
      # NOTE: this should come after /api or else it will hijack requests
      - path: /api
        backend:
          serviceName: nginx
          servicePort: 80
